snapshots/care/data4life/hc-util-sdk-kmp/error/1.11.0-SNAPSHOT/error-1.11.0-20220426.120746-1.pom.sha1
e3ac0c4a62be148797faceffab5c1d54101a00f0